src/styles/sass/page/_history.scss
/* ... */
.wallet-transaction-table {
    .bullet {
        width: 10px;
        height: 10px;
        border-radius: 100%;
    }
}

.wallet-referral-tab {
    .title {
        font-style: normal;
        font-weight: bold;
        font-size: 24px;
        line-height: 30px;

        letter-spacing: -0.025em;
    }
    .subtitle {
        font-style: normal;
        font-weight: 500;
        font-size: 16px;
        line-height: 30px;
        letter-spacing: -0.01em;
        word-spacing: 7px;
    }
    .rewards-box {
        background-color: #242424;
        padding: 20px;
        margin-top: 23px;
        margin-bottom: 15px;
        .label {
            font-style: normal;
            font-weight: 500;
            font-size: 13px;
            line-height: 20px;
            letter-spacing: -0.01em;
            color: #ffffff;
            opacity: 0.4;
        }
        .value {
            font-style: normal;
            font-weight: 600;
            font-size: 24px;
            line-height: 20px;
            letter-spacing: -0.01em;
            margin-top: 10px;
        }
    }
    .duplicate-icon {
        width: 24px;
        height: 24px;
        cursor: pointer;
        transition: 300ms;
        &:hover {
            color: lightgrey !important;
        }
    }
    .btn-invite {
        font-size: 24px;
        padding: 10px 60px;
        margin-top: 50px;
    }
}

.stake-duration {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 5px;
    & > div {
        background-color: rgba(255, 255, 255, 0.1);
        padding: 6px 8px;
        cursor: pointer;
    }
    .active-duration {
        border: 2px solid $green;
    }
}
.clock-icon {
    width: 20px;
    height: 20px;
}

.circle-light {
    width: 20px;
    height: 20px;
    background-color: #c4c4c4;
    border-radius: 50%;
}

.profile-value {
    .value-box {
        margin-top: 16px;
        background: rgba(43, 43, 43, 0.5);
        padding: 16px 12px;
    }
    .value-label {
        font-size: 17px;
        color: #5e5e5e;
        .value-label-eye-icon {
            width: 22px;
            height: 22px;
            color: #666666;
            margin-left: 10px;
            cursor: pointer;
            transition: 500ms;
            &:hover {
                color: #5e5e5e;
            }
        }
    }
    .value {
        font-size: 40px;
        line-height: 54px;
    }
    .max-value {
        font-size: 15px;
        line-height: 18px;
        color: #959595;
    }
}

.bid-activity {
    @include custom-scroll(250px);
    li {
        padding: 19px 0;
        border-bottom: 1px solid $green;
    }
    .bid {
        &-name {
            font-size: 13px;
            line-height: 16px;
            color: white;
        }
        &-date {
            font-size: 10px;
            line-height: 12px;
            color: #8e8e8e;
        }
        &-price {
            font-weight: 500;
            font-size: 15px;
            line-height: 18px;
            letter-spacing: 0.01em;
            color: white;
        }
    }
}

